// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data should match a snapshot with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <div
        class="el-flex-container el-flex-auto"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <mock-styled.p
            classname="el-text-base"
          >
            Support
          </mock-styled.p>
          <mock-styled.p
            classname="el-text-base el-has-grey-text"
            tag="p"
          >
            Please see our
             
            <a
              href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
              rel="noopener noreferrer"
              target="_blank"
            >
              usage instructions
            </a>
             
            for further information on how to use these details to connect a number of popular BI applications.
          </mock-styled.p>
          <mock-styled.p
            classname="el-text-base el-has-grey-text el-has-section-margin"
            tag="p"
          >
            Please see below for more resources.
          </mock-styled.p>
          <mock-styled.button
            classname="el-mb5 el-intent-neutral"
          >
            <mock-styled.div />
            View Docs
          </mock-styled.button>
          <div>
            <mock-styled.button
              classname="el-mb5 el-intent-neutral"
            >
              <mock-styled.div />
              Video
            </mock-styled.button>
          </div>
          <mock-styled.button
            classname="el-mb5 el-intent-neutral"
          >
            <mock-styled.div />
            Help
          </mock-styled.button>
        </aside>
        <section
          class="el-page-container"
        >
          <mock-styled.h1
            classname="el-text-base"
          >
            Sharing Data
          </mock-styled.h1>
          <mock-styled.p
            classname="el-text-base el-has-grey-text"
          >
            Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
          </mock-styled.p>
          <mock-styled.p
            classname="el-text-base el-has-grey-text"
          >
            Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
          </mock-styled.p>
          <mock-styled.h2
            classname="el-text-base"
          >
            Available Data
          </mock-styled.h2>
          <mock-styled.div
            classname="el-mb11"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="3"
            role="table"
          >
            <mock-styled.div
              role="row"
            >
              <mock-styled.div
                aria-label="Name"
                role="columnheader"
              >
                Name
              </mock-styled.div>
              <mock-styled.div
                aria-label="Provider"
                role="columnheader"
              >
                Provider
              </mock-styled.div>
              <mock-styled.div
                aria-label="Description"
                role="columnheader"
              >
                Description
              </mock-styled.div>
              <mock-styled.div
                role="columnheader"
              >
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
              role="row"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Name"
                  >
                    RPS Database
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Provider"
                  >
                    Reapit Ltd
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Description"
                  >
                    Access to legacy data
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                  role="cell"
                >
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                    role="img"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                aria-hidden="false"
                classname=""
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div
                      classname="el-button-group-align-center"
                    >
                      <mock-styled.button
                        classname="el-intent-primary"
                        disabled="false"
                      >
                        <mock-styled.div />
                        Create Share
                      </mock-styled.button>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
              role="row"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Name"
                  >
                    RPS Views
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Provider"
                  >
                    Reapit Ltd
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Description"
                  >
                    Access to legacy views
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                  role="cell"
                >
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                    role="img"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                aria-hidden="false"
                classname=""
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div
                      classname="el-button-group-align-center"
                    >
                      <mock-styled.button
                        classname="el-intent-primary"
                        disabled="false"
                      >
                        <mock-styled.div />
                        Create Share
                      </mock-styled.button>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.h2
            classname="el-text-base"
          >
            Data Shares
          </mock-styled.h2>
          <mock-styled.div
            classname="el-mb11"
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="5"
            role="table"
          >
            <mock-styled.div
              role="row"
            >
              <mock-styled.div
                aria-label="Data Set Name"
                role="columnheader"
              >
                Data Set Name
              </mock-styled.div>
              <mock-styled.div
                aria-label="Database"
                role="columnheader"
              >
                Database
              </mock-styled.div>
              <mock-styled.div
                aria-label="Schema"
                role="columnheader"
              >
                Schema
              </mock-styled.div>
              <mock-styled.div
                aria-label="Warehouse"
                role="columnheader"
              >
                Warehouse
              </mock-styled.div>
              <mock-styled.div
                aria-label="Region"
                role="columnheader"
              >
                Region
              </mock-styled.div>
              <mock-styled.div
                role="columnheader"
              >
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
              role="row"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Data Set Name"
                  >
                    RPS Database
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Database"
                  >
                    reapit
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Schema"
                  >
                    customers_rps_DEV
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Warehouse"
                  >
                    STANDARD_WH
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Region"
                  >
                    eu-west-1
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                  role="cell"
                >
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                    role="img"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                aria-hidden="false"
                classname=""
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div
                      classname="el-button-group-align-center"
                    >
                      <mock-styled.button
                        classname="el-intent-neutral"
                      >
                        <mock-styled.div />
                        Copy URL
                      </mock-styled.button>
                      <mock-styled.button
                        classname="el-intent-neutral"
                      >
                        <mock-styled.div />
                        Copy DSN
                      </mock-styled.button>
                      <mock-styled.button
                        classname="el-intent-primary"
                        disabled="false"
                      >
                        <mock-styled.div />
                        Refresh Share
                      </mock-styled.button>
                      <mock-styled.button
                        classname="el-intent-danger"
                        disabled="false"
                      >
                        <mock-styled.div />
                        Delete Share
                      </mock-styled.button>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <div
      class="el-flex-container el-flex-auto"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <mock-styled.p
          classname="el-text-base"
        >
          Support
        </mock-styled.p>
        <mock-styled.p
          classname="el-text-base el-has-grey-text"
          tag="p"
        >
          Please see our
           
          <a
            href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
            rel="noopener noreferrer"
            target="_blank"
          >
            usage instructions
          </a>
           
          for further information on how to use these details to connect a number of popular BI applications.
        </mock-styled.p>
        <mock-styled.p
          classname="el-text-base el-has-grey-text el-has-section-margin"
          tag="p"
        >
          Please see below for more resources.
        </mock-styled.p>
        <mock-styled.button
          classname="el-mb5 el-intent-neutral"
        >
          <mock-styled.div />
          View Docs
        </mock-styled.button>
        <div>
          <mock-styled.button
            classname="el-mb5 el-intent-neutral"
          >
            <mock-styled.div />
            Video
          </mock-styled.button>
        </div>
        <mock-styled.button
          classname="el-mb5 el-intent-neutral"
        >
          <mock-styled.div />
          Help
        </mock-styled.button>
      </aside>
      <section
        class="el-page-container"
      >
        <mock-styled.h1
          classname="el-text-base"
        >
          Sharing Data
        </mock-styled.h1>
        <mock-styled.p
          classname="el-text-base el-has-grey-text"
        >
          Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
        </mock-styled.p>
        <mock-styled.p
          classname="el-text-base el-has-grey-text"
        >
          Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
        </mock-styled.p>
        <mock-styled.h2
          classname="el-text-base"
        >
          Available Data
        </mock-styled.h2>
        <mock-styled.div
          classname="el-mb11"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="3"
          role="table"
        >
          <mock-styled.div
            role="row"
          >
            <mock-styled.div
              aria-label="Name"
              role="columnheader"
            >
              Name
            </mock-styled.div>
            <mock-styled.div
              aria-label="Provider"
              role="columnheader"
            >
              Provider
            </mock-styled.div>
            <mock-styled.div
              aria-label="Description"
              role="columnheader"
            >
              Description
            </mock-styled.div>
            <mock-styled.div
              role="columnheader"
            >
              <mock-styled.span
                classname="el-intent-default el-icon-new"
                role="img"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
            role="row"
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Name"
                >
                  RPS Database
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Provider"
                >
                  Reapit Ltd
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Description"
                >
                  Access to legacy data
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
                role="cell"
              >
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              aria-hidden="false"
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="el-button-group-align-center"
                  >
                    <mock-styled.button
                      classname="el-intent-primary"
                      disabled="false"
                    >
                      <mock-styled.div />
                      Create Share
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
            role="row"
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Name"
                >
                  RPS Views
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Provider"
                >
                  Reapit Ltd
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Description"
                >
                  Access to legacy views
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
                role="cell"
              >
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              aria-hidden="false"
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="el-button-group-align-center"
                  >
                    <mock-styled.button
                      classname="el-intent-primary"
                      disabled="false"
                    >
                      <mock-styled.div />
                      Create Share
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.h2
          classname="el-text-base"
        >
          Data Shares
        </mock-styled.h2>
        <mock-styled.div
          classname="el-mb11"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="5"
          role="table"
        >
          <mock-styled.div
            role="row"
          >
            <mock-styled.div
              aria-label="Data Set Name"
              role="columnheader"
            >
              Data Set Name
            </mock-styled.div>
            <mock-styled.div
              aria-label="Database"
              role="columnheader"
            >
              Database
            </mock-styled.div>
            <mock-styled.div
              aria-label="Schema"
              role="columnheader"
            >
              Schema
            </mock-styled.div>
            <mock-styled.div
              aria-label="Warehouse"
              role="columnheader"
            >
              Warehouse
            </mock-styled.div>
            <mock-styled.div
              aria-label="Region"
              role="columnheader"
            >
              Region
            </mock-styled.div>
            <mock-styled.div
              role="columnheader"
            >
              <mock-styled.span
                classname="el-intent-default el-icon-new"
                role="img"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
            role="row"
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Data Set Name"
                >
                  RPS Database
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Database"
                >
                  reapit
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Schema"
                >
                  customers_rps_DEV
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Warehouse"
                >
                  STANDARD_WH
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Region"
                >
                  eu-west-1
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
                role="cell"
              >
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              aria-hidden="false"
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="el-button-group-align-center"
                  >
                    <mock-styled.button
                      classname="el-intent-neutral"
                    >
                      <mock-styled.div />
                      Copy URL
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-neutral"
                    >
                      <mock-styled.div />
                      Copy DSN
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-primary"
                      disabled="false"
                    >
                      <mock-styled.div />
                      Refresh Share
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-danger"
                      disabled="false"
                    >
                      <mock-styled.div />
                      Delete Share
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Data should match a snapshot with no data and loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <div
        class="el-flex-container el-flex-auto"
      >
        <aside
          class="el-secondary-nav-container"
        >
          <mock-styled.p
            classname="el-text-base"
          >
            Support
          </mock-styled.p>
          <mock-styled.p
            classname="el-text-base el-has-grey-text"
            tag="p"
          >
            Please see our
             
            <a
              href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
              rel="noopener noreferrer"
              target="_blank"
            >
              usage instructions
            </a>
             
            for further information on how to use these details to connect a number of popular BI applications.
          </mock-styled.p>
          <mock-styled.p
            classname="el-text-base el-has-grey-text el-has-section-margin"
            tag="p"
          >
            Please see below for more resources.
          </mock-styled.p>
          <mock-styled.button
            classname="el-mb5 el-intent-neutral"
          >
            <mock-styled.div />
            View Docs
          </mock-styled.button>
          <div>
            <mock-styled.button
              classname="el-mb5 el-intent-neutral"
            >
              <mock-styled.div />
              Video
            </mock-styled.button>
          </div>
          <mock-styled.button
            classname="el-mb5 el-intent-neutral"
          >
            <mock-styled.div />
            Help
          </mock-styled.button>
        </aside>
        <section
          class="el-page-container"
        >
          <mock-styled.h1
            classname="el-text-base"
          >
            Sharing Data
          </mock-styled.h1>
          <mock-styled.p
            classname="el-text-base el-has-grey-text"
          >
            Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
          </mock-styled.p>
          <mock-styled.p
            classname="el-text-base el-has-grey-text"
          >
            Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
          </mock-styled.p>
          <mock-styled.h2
            classname="el-text-base"
          >
            Available Data
          </mock-styled.h2>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div
              classname="el-mb11"
            >
              <mock-styled.div />
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.h2
            classname="el-text-base"
          >
            Data Shares
          </mock-styled.h2>
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div />
            </mock-styled.div>
          </mock-styled.div>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <div
      class="el-flex-container el-flex-auto"
    >
      <aside
        class="el-secondary-nav-container"
      >
        <mock-styled.p
          classname="el-text-base"
        >
          Support
        </mock-styled.p>
        <mock-styled.p
          classname="el-text-base el-has-grey-text"
          tag="p"
        >
          Please see our
           
          <a
            href="https://www.youtube.com/watch?v=N-4TeWsM7EU&feature=youtu.be"
            rel="noopener noreferrer"
            target="_blank"
          >
            usage instructions
          </a>
           
          for further information on how to use these details to connect a number of popular BI applications.
        </mock-styled.p>
        <mock-styled.p
          classname="el-text-base el-has-grey-text el-has-section-margin"
          tag="p"
        >
          Please see below for more resources.
        </mock-styled.p>
        <mock-styled.button
          classname="el-mb5 el-intent-neutral"
        >
          <mock-styled.div />
          View Docs
        </mock-styled.button>
        <div>
          <mock-styled.button
            classname="el-mb5 el-intent-neutral"
          >
            <mock-styled.div />
            Video
          </mock-styled.button>
        </div>
        <mock-styled.button
          classname="el-mb5 el-intent-neutral"
        >
          <mock-styled.div />
          Help
        </mock-styled.button>
      </aside>
      <section
        class="el-page-container"
      >
        <mock-styled.h1
          classname="el-text-base"
        >
          Sharing Data
        </mock-styled.h1>
        <mock-styled.p
          classname="el-text-base el-has-grey-text"
        >
          Our data warehouse solution can provide access to your data in a number of different formats. To get immediate access to your data in a particular format, click ‘Create Share’. The data will be published into your data warehouse and connectivity information will then be presented to you.
        </mock-styled.p>
        <mock-styled.p
          classname="el-text-base el-has-grey-text"
        >
          Please note that creating a data share is a long running process and can take 30 seconds or more to complete.
        </mock-styled.p>
        <mock-styled.h2
          classname="el-text-base"
        >
          Available Data
        </mock-styled.h2>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.h2
          classname="el-text-base"
        >
          Data Shares
        </mock-styled.h2>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
